
include_HEADERS = univalue.h

lib_LIBRARIES = libunivalue.a

libunivalue_a_SOURCES = \
	univalue.cpp \
	univalue_read.cpp \
	univalue_write.cpp

TESTS = unitester

noinst_PROGRAMS = unitester

unitester_SOURCES = unitester.cpp
unitester_LDADD = libunivalue.a

EXTRA_DIST = \
	fail10.json \
	fail11.json \
	fail12.json \
	fail13.json \
	fail14.json \
	fail15.json \
	fail16.json \
	fail17.json \
	fail18.json \
	fail19.json \
	fail1.json \
	fail20.json \
	fail21.json \
	fail22.json \
	fail23.json \
	fail24.json \
	fail25.json \
	fail26.json \
	fail27.json \
	fail28.json \
	fail29.json \
	fail2.json \
	fail30.json \
	fail31.json \
	fail32.json \
	fail33.json \
	fail3.json \
	fail4.json \
	fail5.json \
	fail6.json \
	fail7.json \
	fail8.json \
	fail9.json \
	pass1.json \
	pass2.json \
	pass3.json

